--- a/frameworks/react/src/components/pages/Calendar/components/features/CalendarBody/index.module.css
+++ b/frameworks/react/src/components/pages/Calendar/components/features/CalendarBody/index.module.css
@@ -5,7 +5,7 @@
 
 .ul {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(7, minmax(0, 1fr));
   grid-template-rows: 1fr;
   grid-auto-rows: 140px;
   gap: 1px;
